--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build without tests
+    name: Build and test
     runs-on: macos-latest
     steps:
       - name: Check out project
