use latest xcode version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Build And Test macOS
         run: xcodebuild -workspace *.xcworkspace -scheme "Hamcrest-macOS" build test | xcpretty && exit ${PIPESTATUS[0]}
+        with:
+          xcode-version: latest
       - name: Build And Test iOS
         run: xcodebuild -workspace *.xcworkspace -scheme "Hamcrest-iOS" -sdk iphonesimulator -destination "platform=iOS Simulator,OS=latest,name=iPhone 16" build test | xcpretty && exit ${PIPESTATUS[0]}
+        with:
+          xcode-version: latest
       - name: Cocoapods Check
         run: pod spec lint --quick
